<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Social_aggregator</string>
    <string name="date_text">Some date</string>
    <string name="message_text">Some message</string>
    <string name="nickname_text">Some nickname</string>
    <string name="recipient_name">Recipient</string>
    <string name="recipient_autotext">Enter a friend\'s name or leave it empty(write to the wall)</string>
    <string name="recipient_message">Message</string>
    <string name="refresh_button_name">Refresh</string>
    <string name="send_button_name">Send</string>
    <string name="Vk">Vkontakte</string>
    <string name="FB">Facebook</string>
	<string name="dialog_button_name">Dialog</string>
	<string name="load_new_message">Loading...</string>
</resources>
