<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/post_name_textColor"
              android:divider="#000000"
							android:dividerPadding="10dp"
							android:orientation="horizontal"
							android:weightSum="1">

        <Button android:id="@+id/refresh_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:text="@string/refresh_button_name"
                android:background="@color/post_name_textColor"
                android:textColor="#ffffff"
								android:layout_weight="0.33"

								/>

        <Button android:id="@+id/post_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:text="@string/send_button_name"
                android:background="@color/post_name_textColor"
                android:textColor="#ffffff"
								android:layout_weight="0.33"
								/>

				<Button android:id="@+id/dialog_button"
								android:layout_width="fill_parent"
								android:layout_height="wrap_content"
								android:height="50dp"
								android:text="@string/dialog_button_name"
								android:background="@color/post_name_textColor"
								android:textColor="#ffffff"
								android:layout_weight="0.33"
								/>

</LinearLayout>