<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/post_color">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="16dp"
            android:background="@color/post_color">

        <TextView android:id="@+id/sender"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/post_name_textColor"
                  android:textStyle="bold"
                  android:text="@string/nickname_text"
                  android:focusable="false"
                  android:focusableInTouchMode="false" android:padding="2dp"/>

        <TextView android:id="@+id/message"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:textColor="@color/post_message_textColor"
                  android:text="@string/message_text"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:padding="2dp"/>

        <TextView android:id="@+id/date"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="10dp"
                  android:textColor="@color/post_date_textColor"
                  android:text="@string/date_text"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:padding="2dp"/>

    </LinearLayout>
</RelativeLayout>