<RelativeLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="@color/post_color"
				android:id="@+id/RelativeMessageLayout">
		<ImageView
						android:id="@+id/imageView"
						android:layout_width="70dp"
						android:layout_height="70dp"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:src="@drawable/vk_logo_big"
						android:padding="5dp"
						android:layout_alignParentStart="true"/>
		<ImageView
						android:id="@+id/socView"
						android:layout_width="70dp"
						android:layout_height="70dp"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:src="@drawable/vk_logo_big"
						android:padding="5dp"
						android:layout_alignParentEnd="true"/>
		<LinearLayout
						android:id="@+id/LinearMessageLayout"
						android:orientation="vertical"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_centerHorizontal="true"
						android:layout_alignTop="@id/imageView"
						android:layout_alignParentLeft="true"
						android:layout_marginLeft="70dp"
						android:layout_marginRight="70dp"
						android:background="@color/post_color"
						android:padding="5dp">

				<TextView android:id="@+id/sender"
									android:layout_width="fill_parent"
									android:layout_height="wrap_content"
									android:textColor="@color/post_name_textColor"
									android:textStyle="bold"
									android:text="@string/nickname_text"
									android:focusable="false"
									android:focusableInTouchMode="false" android:padding="2dp"/>

				<TextView android:id="@+id/message"
									android:layout_width="fill_parent"
									android:layout_height="wrap_content"
									android:textColor="@color/post_message_textColor"
									android:text="@string/message_text"
									android:focusable="false"
									android:focusableInTouchMode="false"
									android:padding="2dp"/>

				<TextView android:id="@+id/date"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:textSize="10dp"
									android:textColor="@color/post_date_textColor"
									android:text="@string/date_text"
									android:focusable="false"
									android:focusableInTouchMode="false"
									android:padding="2dp"/>

		</LinearLayout>
</RelativeLayout>